[FIX] mail: emoji in discuss text is slightly bigger
Follow-up of #202766

PR above fixed an issue with some emojis being represented
as 4 emojis rather than 1. The change consisted in using
non-colored emoji fonts.

However this change negatively affected font "text-emoji":
emojis were no longer size-adjusted to 121%, thus emojis became
too small.

This commit reverts the change of font to keep using the "color"
versions, so that the size-adjustment of emojis is taken into
account. The problem with family emojis is therefore back, but
this is a less problem than the lack of size adjustment of the
emojis in Discuss content.

X-original-commit: 3a0d0d11d767be3cbf26a13b6c93612f418d11de

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -50,9 +50,9 @@
 @font-face {
     font-family: "text-emoji";
     src: local('Segoe UI'),
-         local('Apple Emoji'),
+         local('Apple Color Emoji'),
          local('Android Emoji'),
-         local('Noto Emoji'),
+         local('Noto Color Emoji'),
          local('Twitter Color Emoji'),
          local('Twitter Color'),
          local('EmojiOne Color'),
